--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: seastackplot
-Title: What the Package Does (One Line, Title Case)
+Title: Create Seastack Plots
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Alice", "Stuart", , "alice.stuart@uea.ac.uk", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-5208-8030"))
+Description: Seastack plots combine histograms with summary statistics to produce a more transparent summary of the data than most common plot types. 
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Depends:
+    R (>= 3.4.0),
+	  ggplot2
 Imports: 
     magrittr
