--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(GeomSeastackStats)
 export(geom_seastack_stats)
+export(sea_stack_plot)
 export(theme_seastack)
 import(ggplot2)
 importFrom(magrittr,"%>%")
