Changes: - added quantiles to the graphs - created option to change length of confidence interval (and quantile) ticks - fixed code so that mean.size and median.size now work to change the size of the mean and median points - made the standard deviation rectangle a slightly lighter grey - started on code to make confidence interval and quantile width customisable (currently default to 0.95 and 0.5 respectively)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GeomHorizontalSeastackStats)
 export(GeomSeastackStats)
 export(geom_horizontal_seastack_stats)
 export(geom_seastack_stats)
+export(histBreaks)
 export(sea_stack_plot)
 export(theme_seastack)
 import(ggplot2)
